# ContentShield

./: .gitignore  README.md  owners.txt
.github/: copilot-instructions.md
.github/instructions/: agents.instructions.md
RatioAI.ContentShield/: .dockerignore  .gitignore  Dockerfile  README.md  config.sample.env  docker-compose.yml  pyproject.toml  ruff.toml
RatioAI.ContentShield/Scripts/: dac_smoke.py
RatioAI.ContentShield/docs/: SYSTEM_DESIGN.md
RatioAI.ContentShield/docs/poc/: pi-classifier-v6-original.txt
RatioAI.ContentShield/evals/: adapters.py  config.py  run_eval.py  run_pipeline_eval.py
RatioAI.ContentShield/services/stage2/: .dockerignore  Dockerfile  Dockerfile.aoai-cpu  Dockerfile.baked  Dockerfile.slm-gpu  pyproject.toml
RatioAI.ContentShield/services/stage2/deploy/configs/: gemma4-31b.env
RatioAI.ContentShield/services/stage2/deploy/scripts/: start-vllm.sh
RatioAI.ContentShield/services/stage2/prompts/: pi-classifier-gpt4o-v1.txt  pi-classifier-v6.txt  pi-classifier-v7-en.txt  pi-reason-v1.txt
RatioAI.ContentShield/services/stage2/src/stage2/: __init__.py  main.py
RatioAI.ContentShield/src/contentshield/: __init__.py  app.py  auth.py  config.py
RatioAI.ContentShield/src/contentshield/api/: __init__.py  mappers.py  models.py  routes.py
RatioAI.ContentShield/src/contentshield/domain/: __init__.py  errors.py  models.py
RatioAI.ContentShield/src/contentshield/infrastructure/: __init__.py  acs_prompt_shield.py  detectors.py  query_detect.py  stage2_client.py
RatioAI.ContentShield/src/contentshield/infrastructure/stage1/: __init__.py  chunker.py  classifier.py  detector.py  embedder.py
RatioAI.ContentShield/src/contentshield/infrastructure/stage1/models/: stage1_logreg.joblib  stage1_logreg.sha256
RatioAI.ContentShield/src/contentshield/orchestrator/: __init__.py  pipeline.py
RatioAI.ContentShield/tests/: conftest.py  test_acs_prompt_shield.py  test_api.py  test_config_auth.py  test_domain_models.py  test_eval_runner_adapters.py  test_pipeline.py  test_query_detect.py  test_stage1.py  test_stage2_client.py  test_stage2_wrapper.py
RatioAI.ContentShield/tests/e2e/: conftest.py  test_aad_token.py
RatioAI.ContentShield/tests/integration/: conftest.py  test_stage2_smoke.py
infra/contentshield/: CUSTOMER-README.md  DISTRIBUTION-FLOW.md  MODEL-PIPELINE.md  README.md  SYSTEM_DESIGN.md  acme-credentials.json  axa-creds.json  baked-local-run1.csv  deploy.ps1  main.bicep  (+8 more)
(+35 files in other folders)
